--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -71,6 +71,7 @@
 @import "close.less";
 
 // Components w/ JavaScript
+// 静态弹出框
 @import "modals.less";
 @import "tooltip.less";
 @import "popovers.less";
