--- a/less/modals.less
+++ b/less/modals.less
@@ -120,7 +120,7 @@
   }
 }
 
-// Measure scrollbar width for padding body during modal show/hide
+// Measure scrollbar width for padding body during modal show/hide(测量滚动条宽度)
 .modal-scrollbar-measure {
   position: absolute;
   top: -9999px;
