--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -75,6 +75,7 @@
 @import "modals.less";
 @import "tooltip.less";
 @import "popovers.less";
+// 图片轮播
 @import "carousel.less";
 
 // Utility classes
