--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -78,6 +78,6 @@
 // 图片轮播
 @import "carousel.less";
 
-// Utility classes
+// Utility classes(工具样式)
 @import "utilities.less";
 @import "responsive-utilities.less";
