bootstrap popovers part

--- a/less/popovers.less
+++ b/less/popovers.less
@@ -1,8 +1,6 @@
 //
-// Popovers
+// Popovers(弹出框)
 // --------------------------------------------------
-
-
 .popover {
   position: absolute;
   top: 0;
