--- a/less/popovers.less
+++ b/less/popovers.less
@@ -41,10 +41,9 @@
   padding: 9px 14px;
 }
 
-// Arrows
+// Arrows(箭头)
 //
 // .arrow is outer, .arrow:after is inner
-
 .popover > .arrow {
   &,
   &:after {
